# dispatch-agent

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.claude/skills/allium-weed-loop/: SKILL.md  prompt.md
.claude/skills/decompose-plan/: SKILL.md
.claude/skills/wrap-up/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: reference.md
docs/plans/: 2026-03-25-interactive-agents-design.md  2026-03-25-task-orchestrator-plan.md  300-epic-dispatch-next.md  313-agent-to-agent-messaging.md
docs/specs/: dispatch.allium  task-orchestrator.allium
docs/superpowers/plans/: 2026-03-29-confirmation-before-done.md
hooks/: task-status-hook
plugin/skills/wrap-up/: SKILL.md
scripts/: task-usage-hook
src/: db.rs  dispatch.rs  editor.rs  github.rs  lib.rs  main.rs  models.rs  process.rs  runtime.rs  service.rs  setup.rs  tmux.rs
src/db/: migrations.rs  mod.rs  queries.rs  tests.rs
src/mcp/: handlers.rs  mod.rs
src/mcp/handlers/: dispatch.rs  epics.rs  mod.rs  tasks.rs  tests.rs  types.rs
src/tui/: input.rs  mod.rs  tests.rs  types.rs  ui.rs
src/tui/handlers/: agents.rs  epics.rs  input_flow.rs  mod.rs  navigation.rs  tasks.rs  views.rs  wrap_up.rs
tests/: cli.rs  epic_lifecycle.rs  lifecycle.rs
